Adding Login screen mock

--- a/src/main/webapp/resources/login.html
+++ b/src/main/webapp/resources/login.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Vehicle Monitoring System</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="./resources/lib/bootstrap/bootstrap.min.css"/>
 </head>
 <body>
 <div id="login"></div>
