Adding simple authentication login screen

--- a/src/main/webapp/resources/login.html
+++ b/src/main/webapp/resources/login.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <title>Vehicle Monitoring System</title>
     <link rel="stylesheet" type="text/css" media="screen" href="./resources/lib/bootstrap/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="./resources/dist/app.css"/>
+
 </head>
-<body>
+<body id="loginScreen">
 <div id="login"></div>
 <script src="./resources/dist/login.build.js"></script>
 </body>
