--- a/src/main/webapp/resources/index.html
+++ b/src/main/webapp/resources/index.html
@@ -10,8 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800|Poppins:300,400,500,600,700|Roboto:100,300,400,500,700,900"
           rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="./resources/dist/app.css"/>
-</head>
+\</head>
 <body>
 <div id="content"></div>
 <script src="http://maps.google.com/maps/api/js?key=AIzaSyC3CtQDjwYnSrh_4wNfYbPaM4syRrC93FM"
