--- a/src/main/webapp/resources/index.html
+++ b/src/main/webapp/resources/index.html
@@ -7,10 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./resources/lib/bootstrap/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" media="screen" href="./resources/lib/font-awsome/font-awesome.min.css"/>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800|Poppins:300,400,500,600,700|Roboto:100,300,400,500,700,900"
-          rel="stylesheet">
 
-\</head>
+</head>
 <body>
 <div id="content"></div>
 <script src="http://maps.google.com/maps/api/js?key=AIzaSyC3CtQDjwYnSrh_4wNfYbPaM4syRrC93FM"
