--- a/src/main/webapp/resources/login.html
+++ b/src/main/webapp/resources/login.html
@@ -5,7 +5,50 @@
     <title>Vehicle Monitoring System</title>
     <link rel="stylesheet" type="text/css" media="screen" href="./resources/lib/bootstrap/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" media="screen" href="./resources/dist/app.css"/>
+    <style>
+        #loginScreen {
+            background: #eee !important;
+        }
+        #loginScreen .wrapper {
+            margin-top: 80px;
+            margin-bottom: 80px;
+        }
+        #loginScreen .form-signin {
+            max-width: 380px;
+            padding: 15px 35px 45px;
+            margin: 0 auto;
+            background-color: #fff;
+            border: 1px solid rgba(0, 0, 0, 0.1);
+        }
+        #loginScreen .form-signin .form-signin-heading,
+        #loginScreen .form-signin .checkbox {
+            margin-bottom: 30px;
+        }
+        #loginScreen .form-signin .checkbox {
+            font-weight: normal;
+        }
+        #loginScreen .form-signin .form-control {
+            position: relative;
+            font-size: 16px;
+            height: auto;
+            padding: 10px;
+        @include box-sizing(border-box);
+        }
+        #loginScreen .form-signin .form-control:focus {
+            z-index: 2;
+        }
+        #loginScreen .form-signin input[type="text"] {
+            margin-bottom: -1px;
+            border-bottom-left-radius: 0;
+            border-bottom-right-radius: 0;
+        }
+        #loginScreen .form-signin input[type="password"] {
+            margin-bottom: 20px;
+            border-top-left-radius: 0;
+            border-top-right-radius: 0;
+        }
 
+    </style>
 </head>
 <body id="loginScreen">
 <div id="login"></div>
