--- a/src/main/webapp/resources/index.html
+++ b/src/main/webapp/resources/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./resources/lib/bootstrap/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" media="screen" href="./resources/lib/font-awsome/font-awesome.min.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="./resources/dist/app.css"/>
 
 </head>
 <body>
